--- a/notebooks/regeneration.ipynb
+++ b/notebooks/regeneration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from music_generator.basic.random import generate_dataset\n",
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/marcelra/Pycharmprojects/music-generator/music_generator/basic/signalproc.py:81: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  normal_term = np.sin(np.pi * x) / denom\n"
+     ]
+    }
+   ],
    "source": [
     "ds1 = generate_dataset(n_measures=64,\n",
     "                       tempo=Tempo(120),\n",
@@ -58,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: not combining the score tracks\n"
+     ]
+    }
+   ],
    "source": [
     "audio_tracks, mix = combine_datasets(ds1, ds2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +271,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "40960/40960 [==============================] - 25s 618us/step - loss: 0.0022\n",
+      "Epoch 2/2\n",
+      "40960/40960 [==============================] - 22s 538us/step - loss: 0.0010\n",
+      "Epoch 1/2\n",
+      "40960/40960 [==============================] - 22s 533us/step - loss: 8.4523e-04\n",
+      "Epoch 2/2\n",
+      "40960/40960 [==============================] - 22s 538us/step - loss: 7.5074e-04\n",
+      "Epoch 1/2\n",
+      "40960/40960 [==============================] - 23s 557us/step - loss: 6.9329e-04\n",
+      "Epoch 2/2\n",
+      "40960/40960 [==============================] - 22s 538us/step - loss: 6.6805e-04\n",
+      "Epoch 1/2\n",
+      "40960/40960 [==============================] - 22s 529us/step - loss: 6.4872e-04\n",
+      "Epoch 2/2\n",
+      "40960/40960 [==============================] - 21s 522us/step - loss: 6.0317e-04\n",
+      "Epoch 1/2\n",
+      "40960/40960 [==============================] - 22s 527us/step - loss: 6.2675e-04\n",
+      "Epoch 2/2\n",
+      "18112/40960 [============>.................] - ETA: 14s - loss: 5.7460e-04"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    model.fit(x, y, epochs=2)\n",
@@ -343,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
