--- a/notebooks/regeneration.ipynb
+++ b/notebooks/regeneration.ipynb
@@ -30,6 +30,8 @@
     "\n",
     "from music_generator.musical import scales\n",
     "import numpy as np\n",
+    "from multiprocessing import Pool\n",
+    "from functools import partial\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -53,16 +55,6 @@
     "all_roots = scales.chromatic_scale('C')\n",
     "roots = [n.get_symbol() for n in all_roots.generate(0, 1)]\n",
     "roots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from multiprocessing import Pool\n",
-    "from functools import partial"
    ]
   },
   {
@@ -124,8 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples = 4096 * 25\n",
-    "fragment_length = 4096 * 1\n",
+    "n_samples = 1024 * 10\n",
+    "fragment_length = 1024 * 1\n",
     "input_track = mix\n",
     "target_track = audio_tracks[2]"
    ]
@@ -196,6 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# play_array(np.repeat(x[8], 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def x_fade_profile(batch_dim):\n",
     "    x = np.arange(batch_dim)\n",
     "    return 1 - abs(x - (batch_dim / 2)) / (batch_dim / 2)"
@@ -257,9 +258,9 @@
    "outputs": [],
    "source": [
     "model = keras.models.Sequential()\n",
-    "model.add(Dense(2048, input_shape=input_shape))\n",
+    "model.add(Dense(1024, input_shape=input_shape))\n",
     "model.add(PReLU())\n",
-    "model.add(Dense(1024))\n",
+    "model.add(Dense(512))\n",
     "model.add(PReLU())\n",
     "model.add(Dense(output_shape))\n",
     "model.compile(Adam(), 'mse')\n",
@@ -277,13 +278,6 @@
     "    play_array(model_predict(model, mix)[0:5*44100], do_wait_done=True)  \n",
     "    play_array(mix[0:5*44100])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
