--- a/notebooks/gru-regen.ipynb
+++ b/notebooks/gru-regen.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +315,18 @@
       "Epoch 1/2\n",
       "256000/256000 [==============================] - 411s 2ms/step - loss: 0.4224 - val_loss: 0.2873\n",
       "Epoch 2/2\n",
-      " 21248/256000 [=>............................] - ETA: 5:16 - loss: 0.2911"
+      "256000/256000 [==============================] - 367s 1ms/step - loss: 0.2173 - val_loss: 0.1544\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f09145394a8>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
