Add video generation

--- a/notebooks/instrument-detection.ipynb
+++ b/notebooks/instrument-detection.ipynb
@@ -324,8 +324,8 @@
     "    ax.set_ylim(-0.5, 1.5)\n",
     "    return mplfig_to_npimage(fig)\n",
     "\n",
-    "# duration = df.index.max()\n",
-    "duration = 10\n",
+    "duration = df.index.max()\n",
+    "# duration = 10\n",
     "\n",
     "clip1 = VideoClip(make_frame1, duration=duration)\n",
     "clip2 = VideoClip(make_frame2, duration=duration)\n",
@@ -336,8 +336,15 @@
     "\n",
     "final_clip = clips_array([[clip1, clip2], [clip3, clip3]])\n",
     "# final_clip.ipython_display(fps=20, autoplay=True, maxduration=300)\n",
-    "final_clip.to_videofile(\"detection.mp4\", fps=12)"
+    "final_clip.to_videofile(\"detection.mp4\", fps=24)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
