Minor tweaks while building the presentation

--- a/notebooks/gru-regen.ipynb
+++ b/notebooks/gru-regen.ipynb
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_info = SamplingInfo(22050)"
+    "sr = 22050\n",
+    "sampling_info = SamplingInfo(sr)"
    ]
   },
   {
@@ -203,19 +204,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = x.reshape(-1, 128, 1)\n",
-    "y_train = y.reshape(-1, 128)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "batch_size = 32\n",
-    "n_steps = 128\n",
-    "batch_inp_shape = (batch_size, n_steps, 1)"
+    "n_steps = 2048\n",
+    "batch_inp_shape = (batch_size, n_steps, 1)\n",
+    "\n",
+    "x_train = x.reshape(-1, n_steps, 1)\n",
+    "y_train = y.reshape(-1, n_steps, 1)"
    ]
   },
   {
@@ -226,13 +220,14 @@
    "source": [
     "inp = Input(batch_shape=batch_inp_shape)\n",
     "out = inp\n",
-    "out = GRU(128, stateful=True)(out)\n",
+    "out = GRU(512, return_sequences=True)(out)\n",
+    "out = Dense(256, activation='relu')(out)\n",
+    "# out = Dense(256, activation='relu')(out)\n",
     "out = Dense(256)(out)\n",
-    "out = PReLU()(out)\n",
-    "out = Dense(128)(out)\n",
+    "out = Dense(1)(out)\n",
     "model = Model(inp, out)\n",
     "model.summary()\n",
-    "model.compile(Adam(lr=1e-3), mse_scaled)"
+    "model.compile(Adam(lr=1e-3), fft_loss)"
    ]
   },
   {
@@ -241,7 +236,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(x_train, y_train, epochs=2, validation_split=0.2)"
+    "x_train = x_train[0:9984]\n",
+    "y_train = y_train[0:9984]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(x_train, y_train, epochs=2)"
    ]
   },
   {
@@ -259,6 +264,13 @@
     "pred_y = model.predict(pred_x)\n",
     "play_array(pred_y, sample_rate=sampling_info.sample_rate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
