--- a/presentation/0-introduction.ipynb
+++ b/presentation/0-introduction.ipynb
@@ -30,7 +30,7 @@
     "* Use this generated data set for some deep learning applications\n",
     "\n",
     "\n",
-    "* I am mainly going to treat in operations on the raw sound data\n",
+    "* I am mainly going to dive into operations on the raw sound data\n",
     "    * I am not going to dive into models that learn how to compose like a certain artists, etc."
    ]
   },
@@ -54,7 +54,7 @@
    "source": [
     "Main reason: \n",
     "* It's more fun this way\n",
-    "* Since we're building it from the ground up, we can control our complexity\n",
+    "* Since we're building it from the ground up, we can control the complexity and learn more about the strength and weaknesses of the different Deep Learning architectures\n",
     "* The data set of generated music is unlimited, we never run out"
    ]
   },
