--- a/presentation/1-building-synthesizers.ipynb
+++ b/presentation/1-building-synthesizers.ipynb
@@ -78,12 +78,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from scipy.io.wavfile import read"
+    "Before we start out, how do we read audio files?"
    ]
   },
   {
@@ -92,7 +90,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sr, data = read('../data/full-mix.wav')"
+    "from scipy.io.wavfile import read\n",
+    "sr, data_raw = read('../data/full-mix.wav')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sample rate is the number of samples per second of audio. CD-quality music contains 44100 samples per second. "
    ]
   },
   {
@@ -101,10 +107,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.Series(data)\n",
+    "sr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The highest frequency that can be encoded is then 22 kHz (44100/2), which is already higher than the maximum frequency that we can hear (~20 kHz, but decreases with age). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we have loaded mono music, the data is 1D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_raw[50000:50100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data is stored as signed integers. We would like to convert to floating point numbers between -1, 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.Series(data_raw)\n",
     "data.index = data.index / sr\n",
-    "data = data / 2**15 \n",
-    "# data = data.set_index('time')"
+    "data = data / 2**15 "
    ]
   },
   {
@@ -161,6 +214,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ f(t) = \\sin(2 \\pi f t)$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -168,6 +228,15 @@
    "source": [
     "generated = pd.DataFrame({'time': np.arange(0, 1, 1/sr)}).set_index('time')\n",
     "generated['sine'] = np.sin(generated.index * 440 * 2 * np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generated.head()"
    ]
   },
   {
@@ -192,8 +261,7 @@
     "    fig, ax = plt.subplots()\n",
     "    plt.title('Spectral')\n",
     "    f_vec, t_vec, Zxx = stft(df[col_name], sr, nperseg=2048, noverlap=2048 // 4)\n",
-    "    plt.pcolormesh(t_vec, f_vec, np.abs(Zxx)) #, vmin=0, vmax=np.percentile(np.abs(Zxx), 99))\n",
-    "    # plt.title('STFT Magnitude')\n",
+    "    plt.pcolormesh(t_vec, f_vec, np.abs(Zxx))\n",
     "    plt.ylabel('Frequency [Hz]')\n",
     "    plt.xlabel('Time [sec]')\n",
     "    plt.ylim([0, 5000])\n",
@@ -382,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's put a decay on the additive sound"
+    "## Decay applied on the additive sound"
    ]
   },
   {
@@ -491,7 +559,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated['filtered_square'] = apply_filter(generated['square'].values, SamplingInfo(sr), 3000, order=5, ftype='lowpass')"
+    "generated['filtered_square'] = apply_filter(generated['square'].values, \n",
+    "                                            SamplingInfo(sr), 3000, order=5, ftype='lowpass')"
    ]
   },
   {
