--- a/presentation/2-music-generation.ipynb
+++ b/presentation/2-music-generation.ipynb
@@ -20,7 +20,7 @@
     "from music_generator.basic.random import generate_dataset\n",
     "from music_generator.basic.signalproc import SamplingInfo\n",
     "from music_generator.synthesizer.instrument import make_lead_instrument, make_accomp_instrument\n",
-    "from music_generator.musical.timing import Tempo, Duration\n",
+    "from music_generator.musical.timing import Tempo, Duration, Signature\n",
     "from music_generator.musical.scales import GenericScale\n",
     "from music_generator.analysis.play import play_mono_as_stereo, play_array\n",
     "from music_generator.basic.signalproc import mix_at\n",
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Audio(demo_instr.generate_note(Note('D', 3)), rate=sr)"
+    "Audio(demo_instr.generate_note(Note('E', 3)), rate=sr)"
    ]
   },
   {
@@ -155,6 +155,13 @@
    "metadata": {},
    "source": [
     "## Scale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A scale is a selection of notes that fit well together"
    ]
   },
   {
@@ -205,6 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For every note in the scale a fitting chord can be calculated"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -213,7 +227,8 @@
     "notes_ = notes + [notes[-1]]*2\n",
     "auto_chords = ChordInScaleDefinition(scale=scale)\n",
     "chords = [auto_chords.generate_chord(n) for n in notes_]\n",
-    "Audio(np.array([demo_instr.generate_chord(c, time=Duration(0.1)) for c in np.repeat(chords, 4)]).reshape(-1), rate=sr)"
+    "Audio(np.array([demo_instr.generate_chord(c, time=Duration(0.1)) \n",
+    "                for c in np.repeat(chords, 4)]).reshape(-1), rate=sr)"
    ]
   },
   {
@@ -229,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_measures = 16\n",
+    "n_measures = 8\n",
     "tempo = Tempo(120)\n",
     "signature = Signature(4, 4)"
    ]
@@ -247,12 +262,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "chords_instr = make_accomp_instrument(sampling_info)"
+    "First make a chord track with a soft sounding synthesizer\n",
+    "\n",
+    "This chord progression is the most used in pop-music"
    ]
   },
   {
@@ -261,18 +276,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "chords_instr = make_accomp_instrument(sampling_info)\n",
+    "\n",
     "from music_generator.basic.random import generate_chord_track\n",
     "chord_track = generate_chord_track(scale, tempo, signature, n_measures)\n",
-    "chord_audio = chords_instr.generate_track(track)"
+    "chord_audio = chords_instr.generate_track(chord_track)\n",
+    "\n",
+    "Audio(chord_audio, rate=sr)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Audio(chord_audio, rate=sr)"
+    "* Perform a random walk through the scale\n",
+    "* Tune the step (interval) probabilities a bit, so that it sounds ok.\n",
+    "    * Small intervals have higher probabilities than big intervals\n",
+    "* In order to prevent very low or high sounding melodies: mirror step whenever random walk steps outside boundaries"
    ]
   },
   {
@@ -299,12 +319,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can turn the random walk into an array of notes by indexing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.array(notes)[rw.astype(int)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we can feed this to a synthesizer and generate some music"
    ]
   },
   {
@@ -324,13 +358,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mix it together with the chords"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mix = chord_audio.copy()\n",
-    "mix = mix_at(0.7*mix, lead_audio, 0)"
+    "mix = mix_at(0.5*mix, lead_audio, 0)"
    ]
   },
   {
@@ -341,6 +382,13 @@
    "source": [
     "Audio(mix, rate=sr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
