--- a/presentation/4a-intro-GRU.ipynb
+++ b/presentation/4a-intro-GRU.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pitch detection\n",
+    "\n",
+    "* Next case is to reconstruct which note was being played from the raw signal\n",
+    "* Experimental setup:\n",
+    "    1. Generate a sequence of notes using the music generator\n",
+    "    2. Render it to a wave using the synthesizer\n",
+    "    3. Chop the wave data into small batches of a 1/10 of a second\n",
+    "    4. Calculate frequency features using Fourier analysis on these batches\n",
+    "    5. For each of those batches, predict which note is being played\n",
+    "        * Time resolution is equal to the batch size, we might have overlaps between notes\n",
+    "    6. Treat it as a multi-class classification problem\n",
+    "        * Each class corresponds to a note being played, multiple notes can be played together\n",
+    "    7. Train a model with a Gated Recurrent Unit as classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# How does a Gated Recurrent Unit (GRU) work?\n",
     "\n",
     "Before we can explain a GRU we need to understand an RNN"
@@ -20,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A **recurrent** neural network. Normal feed forward neural networks predict only based on an input vector $x$, but in an RNN there is a hidden state that can be updated by $x$"
+    "A **recurrent** neural network. Normal feed forward neural networks predict only based on an input vector $x$, but in an RNN there is a hidden state that can be updated by $x$\n",
+    "\n",
+    "* This is particularly useful for time-series where the data can have **arbitrary length**."
    ]
   },
   {
