--- a/presentation/3b-filter-lead-synth.ipynb
+++ b/presentation/3b-filter-lead-synth.ipynb
@@ -1,13 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "## Imports"
    ]
   },
   {
@@ -16,6 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import keras\n",
     "from keras.layers import Dense, Dropout, PReLU\n",
     "from keras.optimizers import Adam\n",
@@ -34,16 +34,41 @@
     "from functools import partial\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "from IPython.display import Audio\n",
     "%matplotlib inline"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sampling_info = SamplingInfo(44100)"
+    "## Goal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to generate some music with more than one synthesizer\n",
+    "\n",
+    "We will filter out the lead tone using a feed-forward neural network.\n",
+    "\n",
+    "```\n",
+    "Model: input wave with 3 instruments -> output wave 1 instrument\n",
+    "```\n",
+    "\n",
+    "We will use a auto-encoder like setup. Replace the image by a short fragment of 1024 samples (~1/40th of a second) of sound data.\n",
+    "\n",
+    "<img src=\"images/ae.png\">\n",
+    "\n",
+    "[Image source](`https://medium.com/@curiousily/credit-card-fraud-detection-using-autoencoders-in-keras-tensorflow-for-hackers-part-vii-20e0c85301bd)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating the data..."
    ]
   },
   {
@@ -52,35 +77,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sr = 44100\n",
+    "sampling_info = SamplingInfo(sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate in all keys\n",
     "all_roots = scales.chromatic_scale('C')\n",
     "roots = [n.get_symbol() for n in all_roots.generate(0, 1)]\n",
-    "roots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(roots)\n",
+    "\n",
     "def generate_dataset_for_root(root):\n",
-    "    return generate_dataset(n_measures=16,\n",
+    "    return generate_dataset(n_measures=32,\n",
     "                            tempo=Tempo(120),\n",
     "                            scale=GenericScale(root, [0, 2, 3, 5, 7, 8, 10]),\n",
     "                            sampling_info=sampling_info)\n",
     "    \n",
     "with Pool(8) as pool:\n",
-    "    datasets = pool.map(generate_dataset_for_root, roots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make one big data set and make sure data is of same size\n",
-    "audio_tracks, mix = preprocessing.combine_datasets(datasets)"
+    "    datasets = pool.map(generate_dataset_for_root, roots)\n",
+    "    \n",
+    "# Make one big data set and make sure data is of same size    \n",
+    "audio_tracks, mix = preprocessing.combine_datasets(datasets)    "
    ]
   },
   {
@@ -102,12 +124,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# play_mono_as_stereo(mix_at(mix, -audio_tracks[2], at=0))"
+    "## Training and target"
    ]
   },
   {
@@ -116,30 +136,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples = 1024 * 10\n",
+    "Audio(mix[0:8*sr], rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(audio_tracks[2][0:8*sr], rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_samples = 1024 * 40\n",
     "fragment_length = 1024 * 1\n",
     "input_track = mix\n",
     "target_track = audio_tracks[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input_track.shape\n",
-    "# audio_tracks[2].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "play_array(input_track, sampling_info.sample_rate, range_secs=[50, 51])\n",
-    "play_array(target_track, sampling_info.sample_rate, range_secs=[50, 51])"
    ]
   },
   {
@@ -147,27 +165,6 @@
    "metadata": {},
    "source": [
     "# Create training set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# def create_training_data_set(n_samples, fragment_length, input_track, target_track):\n",
-    "#     max_index = min(len(mix), len(target_track))\n",
-    "#     max_start_index = max_index - fragment_length\n",
-    "    \n",
-    "#     # Selection range\n",
-    "#     selection_ranges = np.random.randint(0, max_start_index, n_samples)\n",
-    "#     selection_ranges = [{'begin': x, 'end': x + fragment_length} for x in selection_ranges]\n",
-    "    \n",
-    "#     x = np.array([mix[sr['begin']:sr['end']] for sr in selection_ranges])\n",
-    "#     y = np.array([target_track[sr['begin']:sr['end']] for sr in selection_ranges])\n",
-    "    \n",
-    "#     return x, y"
    ]
   },
   {
@@ -188,7 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# play_array(np.repeat(x[8], 10))"
+    "play_array(x[0])\n",
+    "\n",
+    "# play_array(np.tile(x[0], 100))"
    ]
   },
   {
@@ -199,15 +198,8 @@
    "source": [
     "def x_fade_profile(batch_dim):\n",
     "    x = np.arange(batch_dim)\n",
-    "    return 1 - abs(x - (batch_dim / 2)) / (batch_dim / 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return 1 - abs(x - (batch_dim / 2)) / (batch_dim / 2)\n",
+    "\n",
     "def model_predict(model, input_track):\n",
     "    dim = input_shape[0]\n",
     "    n_batches = int(len(input_track) / dim) - 1\n",
@@ -220,25 +212,27 @@
     "    x0 = np.array([xfp * batch for batch in model.predict(pred_batches)]).reshape(-1)\n",
     "    x1 = np.array([xfp * batch for batch in model.predict(pred_batches_shifted)]).reshape(-1)\n",
     "    \n",
-    "    return mix_at(x0, x1, dim//2)\n",
-    "#     np.tanh()\n",
-    "\n",
-    "# play_array(model_predict(model, mix), do_wait_done=False)\n",
-    "# play_array(model_predict(model, mix[0:5*44100]))"
+    "    return mix_at(x0, x1, dim//2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build network"
+    "## Time for some (deep) learning: build an auto-encoder-like network\n",
+    "\n",
+    "The model is just a simple feed forward neural network\n",
+    "\n",
+    "The architecture is one of a simple auto-encoder: same output dim as input dim. However, the data that we present is different: targets $\\neq$ inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/ae.png\">\n",
+    "\n",
+    "[Image source](`https://medium.com/@curiousily/credit-card-fraud-detection-using-autoencoders-in-keras-tensorflow-for-hackers-part-vii-20e0c85301bd)"
    ]
   },
   {
@@ -264,19 +258,23 @@
     "model.add(PReLU())\n",
     "model.add(Dense(output_shape))\n",
     "model.compile(Adam(), 'mse')\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "play_array(model_predict(model, mix)[0:5*44100], do_wait_done=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "while True:\n",
-    "    model.fit(x, y, epochs=2)\n",
-    "    play_array(model_predict(model, mix)[0:5*44100], do_wait_done=True)  \n",
-    "    play_array(mix[0:5*44100])"
+    "## Fit the model"
    ]
   },
   {
@@ -285,7 +283,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "play_array(model_predict(model, mix[0:15*44100]))"
+    "model.fit(x, y, epochs=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's test the model"
    ]
   },
   {
@@ -294,7 +299,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "play_array(mix[0:15*44100])"
+    "play_array(model_predict(model, mix)[40*sr:45*sr], do_wait_done=True)\n",
+    "play_array(mix[40*sr:45*sr])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Is it overfitted?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course it is overfitted on this particular sound of synth and backing track, and it will not work for any other sounds than this. But how well can it predict if we generate a completely new data set using a different scale (Phrygian Dominant, instead of minor)?"
    ]
   },
   {
@@ -303,8 +323,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.io.wavfile import read\n",
-    "wf = read(\"/Users/marcelraas/dev/test_data/anotherDay.wav\", mmap=False)\n"
+    "score_tracks_test, audio_tracks_test, mix_test = \\\n",
+    "    generate_dataset(n_measures=64,\n",
+    "                     tempo=Tempo(120),\n",
+    "                     scale=GenericScale('E', [0, 1, 4, 5, 7, 8, 10]),\n",
+    "                     sampling_info=sampling_info)"
    ]
   },
   {
@@ -313,50 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_predict_2(model, input_track):\n",
-    "    dim = input_shape[0]\n",
-    "    n_batches = int(len(input_track) / dim) - 1\n",
-    "    pred_batches = input_track[0:n_batches*dim].reshape((-1, dim))\n",
-    "    \n",
-    "    return model.predict(pred_batches).reshape(-1)\n",
-    "\n",
-    "play_array(model_predict_2(model, wf[1][:,0]/32000), range_secs=[177, 200])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score_tracks_t, audio_tracks_t, mix_t = generate_dataset(n_measures=64,\n",
-    "                                                         tempo=Tempo(120),\n",
-    "                                                         scale=GenericScale('E', [0, 1, 4, 5, 7, 8, 10]),\n",
-    "                                                         sampling_info=sampling_info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "play_array(model_predict(model, mix_t[0:15*44100]))\n",
-    "# play_array(model_predict(model, audio_tracks_t[2][0:15*44100]))"
+    "play_array(model_predict(model, mix_test[0:15*44100]))"
    ]
   },
   {
@@ -383,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
